# girlpp

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt
src/: application.hpp  jid.cpp  jid.hpp  main.cpp  mainwindow.hpp  stanza_stream.cpp  stanza_stream.hpp
src/ui/: application.cpp  application.hpp  mainwindow.cpp  mainwindow.hpp
